test: valida vínculos de cadastro e otimiza associação legada